--- a/00-installer-config.j2
+++ b/00-installer-config.j2
@@ -5,6 +5,6 @@ network:
       dhcp4: true
     {{adapters.stdout_lines[1]}}:
       dhcp4: no
-      addresses: [172.20.80.101/24, ]
-      gateway4: 192.168.59.144
+      addresses: [{{ip_add_priv}}, ]
+      gateway4: {{gw_priv}}
   version: 2
