--- a/roles/initial_deployment/templates/nginx.conf.j2
+++ b/roles/initial_deployment/templates/nginx.conf.j2
@@ -26,6 +26,15 @@ http {
 			include fastcgi.conf;
 
 			fastcgi_pass {{ fastcgi_socket }};
-		}	
+		}
+		
+		location = /phpinfo.php {
+                        include fastcgi_params;
+                        include fastcgi.conf;
+                        fastcgi_pass {{ fastcgi_socket }};
+
+			auth_basic "Restricted Content";
+			auth_basic_user_file /etc/nginx/.htpasswd;
+                }	
 	}
 }
